2005-01-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string_workaround.h, debug/_string_workaround.h: Fix of the
	call broadcast to the base class. Non debug workaround always call non debug
	base class methods, debug workaround always calls debug base class methods.

2005-01-19  Francois Dumont  <dums@stlport...>

	* src/msvc_warning_disablers.h: unused file, removed.

	* test/unit/logic_test.cpp: Fix of the tests to avoid warning regarding int
	to bool cast.

	* stlport/stl/pointers/_deque.h, _list.h: Fix of the exported class under MSVC
	compiler thanks Timothy Tenebekov report.

	* build/test/unit/nmake-vc-common.mak, nmake-vc6.mak, nmake-vc70.mak: Modification
	of the make files to avoid unusefull inclusion of vc_warning_disable.h file for
	MSVC.Net 2003 and MSVC 8 compilers.

	* src/locale_impl.h: Export of the locale facets container for MSVC compilers.

	* src/vc_warning_disable.h: Modification to limit the number of disables depending
	on the compiler.

2005-01-18  Francois Dumont  <dums@stlport...>

	* stlport/stl/_algo.c: Modification of the stable_partition implementation
	to limit the size of the allocated temporary buffer of the begin and end
	of the range are already at the right place.
	
	* build/test/unit/nmake-vc-common.mak, nmake-evc-common.mak: Removal of the 
	_STLP_USE_AUTO_LINK macro which is now the default.

2005-01-14  Francois Dumont  <dums@stlport...>

	* stlport/stl/_windows.h, char_traits.h, src/c_locale_win32/c_locale_win32.c:
	Patch from Patrick Bergeron to support 64 bits compilation under Windows using
	VC8.
	
	* stlport/stl/boost_type_traits.h: boost support check and fixing.

2005-01-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_algobase.h: Improvment of the iter_swap algo to use the swap
	method when possible thanks David Abrahams and Aleksey Gurtovoy great book
	introduction.

	* stlport/stl/_alloc.h: Deactivation of the lock free allocator implementation
	not mature enough to be release yet.
	