@@ -309,7 +309,7 @@ extern "C" {
 
 BOOL APIENTRY DllMain( HANDLE hModule, 
                        DWORD  ul_reason_for_call, 
-                       LPVOID lpReserved) {
+                       LPVOID) {
   switch (ul_reason_for_call) {
     case DLL_PROCESS_ATTACH:
       DisableThreadLibraryCalls((HINSTANCE)hModule);
