@@ -59,7 +59,7 @@ __insert_grouping_aux(Char* first, Char* last, const string& grouping,
                                 // digit of the current group.
   int groupsize = 0;            // Size of the current group.
   
-  while (true) {
+  for (;;) {
     groupsize = n < grouping.size() ? grouping[n] : groupsize;
     ++n;
 
@@ -102,9 +102,9 @@ __insert_grouping_aux( /* __basic_iostring<Char> */ Str& iostr, size_t __dec_pos
   str_size n = 0;                                                   // Index of the current group.
   typename basic_string<Char>::iterator cur_group(iostr.begin() + __dec_pos);  // Points immediately beyond the rightmost
                                                                     // digit of the current group.
-  int groupsize = 0;                                                // Size of the current group.
+  unsigned int groupsize = 0;                                       // Size of the current group.
   
-  while (true) {
+  for (;;) {
     groupsize = n < grouping.size() ? grouping[n] : groupsize;
     ++n;
 
