@@ -129,6 +129,8 @@ void UnorderedTest::umap()
     typedef unordered_map<int, umaptype> uumaptype;
     uumaptype uus;
     umaptype const& uref = uus[0];
+    //Avoids warning:
+    (void*)&uref;
     umaptype ucopy = uus[0];
   }
 
